<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">IPTV Smart Player: Stream TV</string>
    <string name="facebook_id" translatable="false">"2635470686650587"</string>
    <string name="id_ads" translatable="false">ca-app-pub-3940256099942544~3347511713</string>

    <string name="title_language">Language</string>
    <string name="title_onboard_1">Stream Your Favorite Shows</string>
    <string name="content_onboard_1">Enjoy unlimited entertainment with thousands of movies, TV shows, and more.</string>
    <string name="title_onboard_2">Discover Endless Entertainment</string>
    <string name="content_onboard_2">Watch your favorite shows and movies anytime, anywhere.</string>
    <string name="title_onboard_3">Easy To Use</string>
    <string name="content_onboard_3">Easy guide-search, secure connecting to channels around the world, Live TV, Smart TV Player</string>
    <string name="title_onboard_4">Discover New Shows</string>
    <string name="content_onboard_4">Explore a wide variety of content tailored just for you.</string>
    <string name="iptv">IPTV</string>
    <string name="don_t_have_any_playlists_yet">Don\'t have any playlists yet</string>
    <string name="home">Home</string>
    <string name="channel">Channel</string>
    <string name="how_to_add_a_playlist">How to Add a Playlist</string>
    <string name="step_1">STEP 1</string>
    <string name="use_any_search_engine_to_find_free_iptv_playlist_public">Use any search engine to find \'free IPTV playlist public\'</string>
    <string name="free_iptv_playlist_public">Free IPTV playlist public</string>
    <string name="step_2">STEP 2</string>
    <string name="copy_the_m3u_playlist_or_download_the_file">Copy the M3U playlist or download the file.</string>
    <string name="step_3">STEP 3</string>
    <string name="return_to_the_app_tap_the_add_playlist_button_select_import_playlist_url_and_paste_the_link">Return to the app, tap the \'Add Playlist\' button, select \'Import Playlist URL\' and paste the link.</string>
    <string name="step_4">STEP 4</string>
    <string name="start_streaming_and_enjoy_your_iptv_shows">Start streaming and enjoy your IPTV shows.</string>
    <string name="channel_not_available_now">Channel not available now</string>
    <string name="playlist_name">Playlist name</string>
    <string name="playlist_name_detail">Playlist name detail</string>
    <string name="rename">Rename</string>
    <string name="delete">Delete</string>
    <string name="delete_dialog">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="delete_cf_dialog">Delete</string>
    <string name="mirroring">Mirroring</string>
    <string name="pip">PiP</string>
    <string name="favorite">Favorite</string>
    <string name="lock">Lock</string>
    <string name="rename_bts">Rename</string>
    <string name="cancel_bts">Cancel</string>
    <string name="save_bts">Save</string>
    <string name="import_from_device">Import from device</string>
    <string name="playlist_name_add">Playlist name</string>
    <string name="upload_m3u_file">Upload Video</string>
    <string name="select_videos_to_upload">Select videos to upload</string>
    <string name="save">Save</string>
    <string name="enter_playlist_name">Enter playlist name</string>
    <string name="import_m3u_file">Import M3U file</string>
    <string name="playlist_name_m3u">Playlist name</string>
    <string name="enter_playlist_name_m3u">Enter playlist name</string>
    <string name="upload_m3u_file_m3u">Upload M3U file</string>
    <string name="select_file_to_upload_m3u">Select file to upload</string>
    <string name="save_m3u">Save</string>
    <string name="import_playlist_url">Import playlist URL</string>
    <string name="playlist_name_url">Playlist name</string>
    <string name="enter_playlist_name_url">Enter playlist name</string>
    <string name="playlist_url">Playlist URL</string>
    <string name="http_url_com_sample_m3u">http://url.com/sample.m3u</string>
    <string name="save_url">Save</string>
    <string name="import_playlist_url_bts">Import playlist URL</string>
    <string name="upload_m3u_file_bts">Upload M3U File</string>
    <string name="import_from_device_bts">Import from Device</string>
    <string name="don_t_have_an_m3u_file_to_stream">Don\'t have an M3U file to stream?</string>
    <string name="next">NEXT</string>
    <string name="don_t_have_any_channels_yet">Don\'t have any channels yet</string>
    <string name="all">All</string>
    <string name="url">URL</string>
    <string name="file">File</string>
    <string name="gallery">Gallery</string>
    <string name="start">START</string>
    <string name="next_onboarding">NEXT</string>
    <string name="all_channel">All</string>
    <string name="favorite_channel">Favorite</string>
    <string name="recent_channel">Recent</string>
    <string name="do_you_want_to_delete_channel">Do you want to delete %1$s channel?</string>
    <string name="do_you_want_to_delete_playlist">Do you want to delete <b>%1$s</b> playlist?</string>
    <string name="search_channel">Search channel…</string>
    <string name="search_channel_detail">Search channel…</string>
    <string name="english">English</string>
    <string name="korean">Korean</string>
    <string name="spanish">Spanish</string>
    <string name="french">French</string>
    <string name="arabic">Arabic</string>
    <string name="bengali">Bengali</string>
    <string name="russian">Russian</string>
    <string name="portuguese">Portuguese</string>
    <string name="indonesia">Indonesia</string>
    <string name="hindi">Hindi</string>
    <string name="italian">Italian</string>
    <string name="german">German</string>
    <string name="don_t_have_any_playlists_yet_ft_home">Don\'t have any playlists yet</string>
    <string name="channel_unavailable">Channel Unavailable</string>
    <string name="ok">OK</string>
    <string name="this_channel_is_currently_unavailable_please_try_again_later">This channel is currently unavailable. Please try again later.</string>
    <string name="mirroring_img">Mirroring</string>
    <string name="pip_txt">PiP</string>
    <string name="favorite_txt">Favorite</string>
    <string name="lock_txt">Lock</string>
    <string name="all_tab">all</string>
    <string name="cannot_retain_file_access_permission_please_try_again">Cannot retain file access permission. Please try again.</string>
    <string name="error_saving_playlist">Error saving playlist: %1$s</string>
    <string name="add_button">Add button</string>
    <string name="press_the_add_button_to_create_one_fr_home">Press the Add button to create one</string>
    <string name="press_the_add_button_to_create_one_channel">Press the Add button to create one</string>
    <string name="press_the_add_button_to_create_one">Press the Add button to create one</string>
    <string name="screen_lock_long_press_to_unlock">Screen lock. Long press to unlock</string>
    <string name="please_select_at_least_one_video">Please select at least one video</string>
    <string name="please_enter_a_name">Please enter a name</string>
    <string name="please_select_a_file">Please select a file</string>
    <string name="this_action_can_contain_ads">This action can contain ads…</string>
    <string name="not_found">Not result for %1$s</string>
    <string name="no_wi_fi_detected">No Wi-Fi Detected</string>
    <string name="opps_just_lost_internet_connection_please_reconnect">Opps! Just lost internet connection, please reconnect.</string>
    <string name="connect">Connect</string>
    <string name="error_file_size">Cannot read files larger than 30 MB</string>
    <string name="please_enter_a_name_imprt">Please enter a name</string>
    <string name="please_select_a_video">Please select a video</string>
    <string name="please_enter_a_name_import">Please enter a name</string>
    <string name="please_select_a_file_import">Please select a file</string>
    <string name="please_enter_a_name_url">Please enter a name</string>
    <string name="please_fill_in_a_link">Please fill in a link</string>
    <string name="invalid_url_or_no_channels_found">Invalid URL or no channels found</string>
    <string name="playlist_name_already_exists">Playlist name already exists</string>
    <string name="playlist_name_already_exists_file">Playlist name already exists</string>
    <string name="playlist_name_already_exists_video">Playlist name already exists</string>
    <string name="error_saving_playlist_video">Error saving playlist</string>
    <string name="cannot_open_the_file">Cannot open the file.</string>
    <string name="no_file_access_permission_please_select_again">No file access permission. Please select again.</string>
    <string name="there_are_no_channels_in_the_group">There are no channels in the group %1$s</string>
    <string name="error_loading_data">Error loading data: %1$s</string>
    <string name="failed_to_open_input_stream_for_uri">Failed to open input stream for URI: %1$s</string>
    <string name="please_select_a_language_first">Please select a language first!</string>
    <string name="device_not_supported">Device not supported</string>
    <string name="please_enable_picture_in_picture_for_this_app">Please enable Picture-in-Picture for this app</string>
    <string name="go_to_picture_in_picture_settings_and_enable_it_for">Go to Picture-in-Picture settings and enable it for %1$s</string>
    <string name="go_to_apps_picture_in_picture_and_enable_it"><![CDATA[Go to Apps > %1$s > Picture-in-Picture and enable it]]></string>
    <string name="pip_not_supported_on_this_device">PiP not supported on this device</string>
    <string name="player_not_ready_for_pip">Player not ready for PiP</string>
    <string name="failed_to_entxer_pip_mode">Failed to entxer PiP mode</string>
    <string name="pip_btn1">PiP</string>
    <string name="lock_text">Lock</string>
    <string name="lock_btn1">Lock</string>
    <string name="favorite_btn1">Favorite</string>
    <string name="mirroring_btn1">Mirroring</string>
    <string name="invalid_video_url">Invalid video URL</string>
    <string name="pip_permission_denied">PiP permission denied</string>
    <string name="name_cannot_be_empty">Name cannot be empty</string>
    <string name="not_results">No Results</string>
    <string name="adjust_token_key">xq4xnd8o5uyo</string>
</resources>

