<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="312dp"
    android:layout_height="wrap_content"
    android:padding="24dp"
    android:orientation="vertical"
    android:background="@drawable/bg_confirm_del">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/channel_unavailable"
        android:fontFamily="@font/inter_bold"
        android:textSize="20sp"
        android:textColor="#171D1E"
        android:layout_marginBottom="16dp"/>


        <TextView
            android:id="@android:id/text1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/inter_regular"
            android:text="@string/this_channel_is_currently_unavailable_please_try_again_later"
            android:textSize="16sp"
            android:textColor="#3F484A" />

    <!-- Phần nút Cancel và Save -->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginTop="24dp"
        android:orientation="horizontal"
        >

        <TextView
            android:id="@+id/btn_ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/inter_semibold"
            android:text="@string/ok"
            android:textColor="@color/cool_blue"
            android:textSize="14sp"
            android:padding="8dp"/>
    </LinearLayout>

</LinearLayout>