<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="@color/white">


        <!-- Nút Back -->
        <ImageView
            android:id="@+id/btnBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_back"
            android:contentDescription="Back"
            android:padding="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="8dp" />

            <!-- Tiêu đề -->
        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ellipsize="marquee"
            android:marqueeRepeatLimit="marquee_forever"
            android:singleLine="true"
            android:scrollHorizontally="true"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:text="@string/import_playlist_url"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="#171D1E"
            android:gravity="center"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@id/btnBack"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="14dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="72dp"/>



    <!-- Label "Playlist name" -->
    <TextView
        android:id="@+id/tvPlaylistName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/playlist_name_url"
        android:textSize="14sp"
        android:textColor="#171D1E"
        android:fontFamily="@font/inter_regular"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvTitle"
        android:layout_marginTop="24dp"/>

    <!-- Ô nhập "Playlist name" -->
    <EditText
        android:id="@+id/etPlaylistName"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:hint="@string/enter_playlist_name_url"
        android:background="@drawable/bg_edittext"
        android:padding="16dp"
        android:textSize="16sp"
        android:textColorHint="#AFB3B4"
        android:textColor="#171D1E"
        android:backgroundTint="#E9EFF0"
        android:fontFamily="@font/inter_regular"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvPlaylistName"
        app:layout_constraintEnd_toEndOf="parent"
        android:singleLine="true"
        android:gravity="center_vertical"
        android:layout_marginTop="8dp"/>

    <!-- Label "Playlist URL" -->
    <TextView
        android:id="@+id/tvPlaylistUrl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/playlist_url"
        android:textSize="14sp"
        android:textColor="#171D1E"
        android:fontFamily="@font/inter_regular"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etPlaylistName"
        android:layout_marginTop="16dp"/>

    <!-- Ô nhập "Playlist URL" -->
    <EditText
        android:id="@+id/etPlaylistUrl"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:hint="@string/http_url_com_sample_m3u"
        android:background="@drawable/bg_edittext"
        android:padding="16dp"
        android:textSize="16sp"
        android:fontFamily="@font/inter_regular"
        android:textColorHint="#9E9E9E"
        android:textColor="#171D1E"
        android:backgroundTint="#E9EFF0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvPlaylistUrl"
        app:layout_constraintEnd_toEndOf="parent"
        android:singleLine="true"
        android:gravity="center_vertical"
        android:layout_marginTop="8dp"/>


    <TextView
        android:id="@+id/btn_add_playlist"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:text="@string/save_url"
        android:textColor="@color/white"
        android:fontFamily="@font/inter_semibold"
        android:textSize="16sp"
        android:background="@drawable/bg_btn_save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="16dp"
        />

</androidx.constraintlayout.widget.ConstraintLayout>
