<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="290dp"
    android:layout_height="wrap_content"
    android:padding="24dp"
    android:orientation="vertical"
    android:background="@drawable/bg_confirm_del">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/delete_dialog"
        android:fontFamily="@font/inter_bold"
        android:textSize="20sp"
        android:textColor="#171D1E"
        android:layout_marginBottom="16dp"/>

    <TextView
        android:id="@+id/message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:maxLines="2"
        android:ellipsize="end"
        android:text="Do you want to delete this playlist?"
        android:fontFamily="@font/inter_regular"
        android:layout_gravity="start"
        android:textSize="16sp"
        android:textColor="#171D1E" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:orientation="horizontal"
        android:layout_marginTop="24dp">

        <TextView
            android:id="@+id/btn_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:fontFamily="@font/inter_semibold"
            android:text="@string/cancel"
            android:textColor="#171D1E"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/btn_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:fontFamily="@font/inter_semibold"
            android:padding="8dp"
            android:text="@string/delete_cf_dialog"
            android:textColor="@color/cool_blue"
            android:textSize="14sp" />

    </LinearLayout>


</LinearLayout>