<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="320dp"
    android:layout_height="312dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/bg_no_connect">


    <ImageView
        android:id="@+id/img_not_connect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/clip_path_group"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginLeft="24dp"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/txt_noWifi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/no_wi_fi_detected"
        android:fontFamily="@font/inter_bold"
        android:textSize="20sp"
        app:layout_constraintTop_toTopOf="parent"
        android:gravity="start"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginLeft="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginTop="132dp"/>

    <TextView
        android:id="@+id/txt_not"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/opps_just_lost_internet_connection_please_reconnect"
        app:layout_constraintTop_toBottomOf="@+id/txt_noWifi"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="24dp"
        android:layout_marginEnd="24dp"/>


    <TextView
        android:id="@+id/btn_Connect"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:text="@string/connect"
        android:textColor="@color/white"
        android:fontFamily="@font/inter_semibold"
        android:textSize="16sp"
        android:background="@drawable/bg_btn_save"
        app:layout_constraintTop_toBottomOf="@+id/txt_not"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_margin="24dp"
        />


</androidx.constraintlayout.widget.ConstraintLayout>